crates/nexus-macros/tests/macro_compile_fail/aggregate_bad_state.stderr
error[E0277]: the trait bound `NotAState: AggregateState` is not satisfied
  --> tests/macro_compile_fail/aggregate_bad_state.rs:20:28
   |
20 | #[nexus::aggregate(state = NotAState, error = MyError, id = MyId)]
   |                            ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `AggregateState` is not implemented for `NotAState`
  --> tests/macro_compile_fail/aggregate_bad_state.rs:14:1
   |
14 | struct NotAState;
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `nexus::Aggregate::State`
  --> $WORKSPACE/crates/nexus/src/aggregate.rs
   |
   |     type State: AggregateState;
   |                 ^^^^^^^^^^^^^^ required by this bound in `Aggregate::State`
